--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
+find_package(LAPACK)
+include_directories (${CMAKE_SOURCE_DIR}/include ${LAPACK})
+
 find_package (Boost COMPONENTS system filesystem REQUIRED)
 include_directories (${CMAKE_SOURCE_DIR}/include ${Boost_INCLUDE_DIRS})
 
@@ -40,5 +43,5 @@ endif()
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cmake/AnpiConfig.hpp.in ${CMAKE_SOURCE_DIR}/include/AnpiConfig.hpp)
 
 add_library(anpi STATIC ${SRCS} ${HEADERS})
-add_executable(proyecto1 main.cpp)
-target_link_libraries(proyecto1 anpi python2.7)
+add_executable(tarea6 main.cpp)
+target_link_libraries(tarea6 anpi python2.7)
