Commit veloz por si la compu falla

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,10 @@
 find_package(LAPACK)
 include_directories (${CMAKE_SOURCE_DIR}/include ${LAPACK})
 
+find_package(LAPACKE)
+include_directories (${CMAKE_SOURCE_DIR}/include ${LAPACKE})
+
+
 find_package (Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
 include_directories(${CMAKE_SOURCE_DIR}/include ${Boost_INCLUDE_DIRS})
 
